--- a/src/components/Location/Location.css
+++ b/src/components/Location/Location.css
@@ -1,6 +1,9 @@
 .map-wrapper {
 	position: relative;
 	width: 100%;
-	height: 200px;
 	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+.map-wrapper > div {
+	height: 200px;
 }
